grammar.txt
============================================================
   MINI LANGUAGE COMPILER — CONTEXT-FREE GRAMMAR (CFG)
============================================================

PROGRAM       → STMT_LIST

STMT_LIST     → STMT STMT_LIST | ε

STMT          → DECL
              | ASSIGN
              | IFSTMT
              | WHILESTMT
              | FORSTMT
              | PRINTSTMT

DECL          → TYPE ID INIT ;
INIT          → = EXPR | ε
TYPE          → int | float | char

ASSIGN        → ID = EXPR ;

IFSTMT        → if ( COND ) BLOCK ELSE_PART
ELSE_PART     → else BLOCK | ε

WHILESTMT     → while ( COND ) BLOCK

FORSTMT       → for ( ASSIGN COND ; ASSIGN ) BLOCK

BLOCK         → { STMT_LIST }

PRINTSTMT     → printf ( ARG ) ;
ARG           → EXPR | STRING

COND          → LOGIC_EXPR

LOGIC_EXPR    → REL_EXPR LOGIC_EXPR'
LOGIC_EXPR'   → && REL_EXPR LOGIC_EXPR'
              | || REL_EXPR LOGIC_EXPR'
              | ε

REL_EXPR      → EXPR RELOP EXPR
RELOP         → > | < | >= | <= | == | !=

EXPR          → TERM EXPR'
EXPR'         → + TERM EXPR'
              | - TERM EXPR'
              | ε

TERM          → FACTOR TERM'
TERM'         → * FACTOR TERM'
              | / FACTOR TERM'
              | % FACTOR TERM'
              | ε

FACTOR        → ID
              |INT_LITERAL
              |FLOAT_LITERAL
              |CHAR_LITERAL
              | ( EXPR )
              | - FACTOR

============================================================
   TOKEN TYPES
============================================================
KEYWORD       : int, float, char, if, else, while, for, printf
IDENTIFIER    : [a-zA-Z_][a-zA-Z0-9_]*
INT_LITERAL   : [0-9]+
FLOAT_LITERAL : [0-9]+\.[0-9]+
CHAR_LITERAL  : '[any single character]'
STRING_LITERAL: "[any characters except double-quote]"
OPERATOR      : + - * / % = == != < > <= >= && ||
DELIMITER     : ; , ( ) { }
COMMENT       : // ... (single-line, ignored)
============================================================
